logs/dag_id=Projet1/run_id=manual__2023-11-23T10:18:35.318958+00:00/task_id=create_table/attempt=1.log
[2023-11-23T10:18:37.256+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-23T10:18:35.318958+00:00 [queued]>
[2023-11-23T10:18:37.267+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-23T10:18:35.318958+00:00 [queued]>
[2023-11-23T10:18:37.268+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-23T10:18:37.282+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-23 10:18:35.318958+00:00
[2023-11-23T10:18:37.287+0000] {standard_task_runner.py:57} INFO - Started process 882 to run task
[2023-11-23T10:18:37.292+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet1', 'create_table', 'manual__2023-11-23T10:18:35.318958+00:00', '--job-id', '478', '--raw', '--subdir', 'DAGS_FOLDER/Projet.py', '--cfg-path', '/tmp/tmpsxh8s4j2']
[2023-11-23T10:18:37.294+0000] {standard_task_runner.py:85} INFO - Job 478: Subtask create_table
[2023-11-23T10:18:37.352+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet1.create_table manual__2023-11-23T10:18:35.318958+00:00 [running]> on host b36ebcee5948
[2023-11-23T10:18:37.448+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-23T10:18:35.318958+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-23T10:18:35.318958+00:00'
[2023-11-23T10:18:37.452+0000] {sql.py:274} INFO - Executing: -- Suppression des tables s'ils existent
DROP TABLE IF EXISTS "Urgences";
DROP TABLE IF EXISTS "Age";
DROP TABLE IF EXISTS "Departements";

-- Création des tables

CREATE TABLE "Departements"
(
    num_dep integer PRIMARY KEY,
    dep_name VARCHAR(255),
    region_name VARCHAR(255)
);

CREATE TABLE "Age"
(
    Code_age integer PRIMARY KEY,
    age VARCHAR(255)
);

CREATE TABLE "Urgences"
(
    dep integer,
    sursaud_cl_age_corona integer , 
    nbre_pass_corona FLOAT, 
    nbre_pass_tot FLOAT, 
    nbre_hospit_corona FLOAT,
    nbre_pass_corona_h FLOAT, 
    nbre_pass_corona_f FLOAT, 
    nbre_pass_tot_h FLOAT, 
    nbre_pass_tot_f FLOAT,
    nbre_hospit_corona_h FLOAT, 
    nbre_hospit_corona_f FLOAT, 
    nbre_acte_corona FLOAT, 
    nbre_acte_tot FLOAT,
    nbre_acte_corona_h FLOAT, 
    nbre_acte_corona_f FLOAT, 
    nbre_acte_tot_h FLOAT, 
    nbre_acte_tot_f FLOAT,
    -- Les contraintes de clé étrangère seront ajoutées plus tard
);

-- Ajout des contraintes de clé étrangère
ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_dep_fkey FOREIGN KEY (dep) REFERENCES "Departements"(num_dep);
ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Age"(Code_age);




-- -- Suppression des clés étrangères s'elles existent :
-- ALTER TABLE IF EXISTS "Urgences" DROP CONSTRAINT IF EXISTS fk_dep CASCADE;
-- ALTER TABLE IF EXISTS "Urgences" DROP CONSTRAINT IF EXISTS fk_age CASCADE;

-- -- Suppression des tables s'elles existent :
-- DROP TABLE IF EXISTS "Urgences" CASCADE;
-- DROP TABLE IF EXISTS "Age" CASCADE;
-- DROP TABLE IF EXISTS "Departements" CASCADE;

-- -- Création des tables :

-- CREATE TABLE "Departements"
-- (
--     num_dep integer PRIMARY KEY,
--     dep_name VARCHAR(255),
--     region_name VARCHAR(255)
-- );

-- CREATE TABLE "Age"
-- (
--     Code_age integer PRIMARY KEY,
--     age VARCHAR(255)
-- );

-- CREATE TABLE "Urgences"(
--     dep integer,
--     sursaud_cl_age_corona integer , 
--     nbre_pass_corona FLOAT, 
--     nbre_pass_tot FLOAT, 
--     nbre_hospit_corona FLOAT,
--     nbre_pass_corona_h FLOAT, 
--     nbre_pass_corona_f FLOAT, 
--     nbre_pass_tot_h FLOAT, 
--     nbre_pass_tot_f FLOAT,
--     nbre_hospit_corona_h FLOAT, 
--     nbre_hospit_corona_f FLOAT, 
--     nbre_acte_corona FLOAT, 
--     nbre_acte_tot FLOAT,
--     nbre_acte_corona_h FLOAT, 
--     nbre_acte_corona_f FLOAT, 
--     nbre_acte_tot_h FLOAT, 
--     nbre_acte_tot_f FLOAT,
--     FOREIGN KEY (dep) REFERENCES "Departements"(num_dep),
--     FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Age"(Code_age)
-- );
[2023-11-23T10:18:37.461+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-23T10:18:37.469+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-23T10:18:37.477+0000] {sql.py:418} INFO - Running statement: -- Suppression des tables s'ils existent
DROP TABLE IF EXISTS "Urgences";
DROP TABLE IF EXISTS "Age";
DROP TABLE IF EXISTS "Departements";

-- Création des tables

CREATE TABLE "Departements"
(
    num_dep integer PRIMARY KEY,
    dep_name VARCHAR(255),
    region_name VARCHAR(255)
);

CREATE TABLE "Age"
(
    Code_age integer PRIMARY KEY,
    age VARCHAR(255)
);

CREATE TABLE "Urgences"
(
    dep integer,
    sursaud_cl_age_corona integer , 
    nbre_pass_corona FLOAT, 
    nbre_pass_tot FLOAT, 
    nbre_hospit_corona FLOAT,
    nbre_pass_corona_h FLOAT, 
    nbre_pass_corona_f FLOAT, 
    nbre_pass_tot_h FLOAT, 
    nbre_pass_tot_f FLOAT,
    nbre_hospit_corona_h FLOAT, 
    nbre_hospit_corona_f FLOAT, 
    nbre_acte_corona FLOAT, 
    nbre_acte_tot FLOAT,
    nbre_acte_corona_h FLOAT, 
    nbre_acte_corona_f FLOAT, 
    nbre_acte_tot_h FLOAT, 
    nbre_acte_tot_f FLOAT,
    -- Les contraintes de clé étrangère seront ajoutées plus tard
);

-- Ajout des contraintes de clé étrangère
ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_dep_fkey FOREIGN KEY (dep) REFERENCES "Departements"(num_dep);
ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Age"(Code_age);




-- -- Suppression des clés étrangères s'elles existent :
-- ALTER TABLE IF EXISTS "Urgences" DROP CONSTRAINT IF EXISTS fk_dep CASCADE;
-- ALTER TABLE IF EXISTS "Urgences" DROP CONSTRAINT IF EXISTS fk_age CASCADE;

-- -- Suppression des tables s'elles existent :
-- DROP TABLE IF EXISTS "Urgences" CASCADE;
-- DROP TABLE IF EXISTS "Age" CASCADE;
-- DROP TABLE IF EXISTS "Departements" CASCADE;

-- -- Création des tables :

-- CREATE TABLE "Departements"
-- (
--     num_dep integer PRIMARY KEY,
--     dep_name VARCHAR(255),
--     region_name VARCHAR(255)
-- );

-- CREATE TABLE "Age"
-- (
--     Code_age integer PRIMARY KEY,
--     age VARCHAR(255)
-- );

-- CREATE TABLE "Urgences"(
--     dep integer,
--     sursaud_cl_age_corona integer , 
--     nbre_pass_corona FLOAT, 
--     nbre_pass_tot FLOAT, 
--     nbre_hospit_corona FLOAT,
--     nbre_pass_corona_h FLOAT, 
--     nbre_pass_corona_f FLOAT, 
--     nbre_pass_tot_h FLOAT, 
--     nbre_pass_tot_f FLOAT,
--     nbre_hospit_corona_h FLOAT, 
--     nbre_hospit_corona_f FLOAT, 
--     nbre_acte_corona FLOAT, 
--     nbre_acte_tot FLOAT,
--     nbre_acte_corona_h FLOAT, 
--     nbre_acte_corona_f FLOAT, 
--     nbre_acte_tot_h FLOAT, 
--     nbre_acte_tot_f FLOAT,
--     FOREIGN KEY (dep) REFERENCES "Departements"(num_dep),
--     FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Age"(Code_age)
-- );, parameters: None
[2023-11-23T10:18:37.480+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 41: );
         ^

[2023-11-23T10:18:37.492+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet1, task_id=create_table, execution_date=20231123T101835, start_date=20231123T101837, end_date=20231123T101837
[2023-11-23T10:18:37.510+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 478 for task create_table (syntax error at or near ")"
LINE 41: );
         ^
; 882)
[2023-11-23T10:18:37.547+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-23T10:18:37.572+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
